# seavigil

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ais-stream.yml  (+3 more)
data/: review_state.json  s2_state.json  sar_state.json  watchlist.json
docs/: DEPLOY.md  DESIGN.md  MEASUREMENT.md  OUTREACH.md
notebooks/: sentinel1_vessel_detection.ipynb
results/: measurement.json  validation.json
scripts/: build_basemap.sh  build_behaviors.py  build_cases.py  build_measurement.py  build_zone_tiles.py  calibration_report.py  extract_showcase_mpas.py  fetch_eez.py  fetch_iuu_list.py  fetch_live_ais.py  fetch_noaa_ais.py  fetch_open_ais.py  live_monitor.py  make_chips.py  own_events.py  review.py  run_sentinel1_detection.py  run_sentinel2_detection.py  s2_engine.py  sar_detections_to_incidents.py  sar_engine.py  serve.py  swap_real_sar.py  viirs_vbd_to_incidents.py  wdpa_from_gee.py  wdpa_gdb_to_geojson.py  wdpa_to_pmtiles.sh
seavigil/: alert.py  authorization.py  data.py  dossier.py  evidence.py  explain.py  features.py  fetch_gfw.py  going_dark.py  incidents.py  iuu_list.py  jurisdiction.py  landmask.py  live_monitor.py  model.py  mpa.py  notify.py  portcall.py  review.py  run.py  sar.py  site.py  spoofing.py  transshipment.py
tests/: test_behaviors.py  test_dossier.py  test_evidence.py  test_incidents.py  test_jurisdiction.py  test_mpa.py  test_pipeline.py  test_sar.py  test_site.py
tracker/: README.md  ingest.py  run.sh  server.py
web/: README.md  about.html  alerts.html  alerts.xml  alerts.xsl  index.html  robots.txt  sitemap.xml
(+616 files in other folders)
