[project]
name = "seavigil"
version = "0.1.0"
description = "SeaVigil: explainable detection of suspicious fishing activity from vessel (AIS) movement."
authors = [{ name = "Isma Abdelkader Di Carlo" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "shap>=0.46",
    "numba>=0.60",
    "shapely>=2.0",
    "pyarrow>=17.0",
    "matplotlib>=3.9",
    "requests>=2.32",
]

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8.0", "jupyterlab>=4.2"]

[tool.uv]
package = false
default-groups = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
